Alle overige modellen toegevoegd in modellen.html en op het beginscherm een link gelegd naar de Porsche website voor meer modellen

--- a/WebsiteBedrijf/opmaak.css
+++ b/WebsiteBedrijf/opmaak.css
@@ -85,17 +85,28 @@ td{
     padding-top: 250px;
 }
 .TextBlok{
+    padding-top: 150px;
     width: 100%;
     overflow: hidden;
     margin-top: 150px;
 }
-.TextFoto{
+.TextFotoLinks{
     width: 45%;
     float: left;
     border-radius: 10px;
 }
-.TextLinks{
+.TextRechts{
     width: 45%;
     float: right;
+    font-size: 2vh;
+}
+.TextFotoRechts{
+    width: 45%;
+    float: right;
+    border-radius: 10px;
+}
+.TextLinks{
+    width: 45%;
+    float: left;
     font-size: 2vh;
 }
